# llm-sdk

./: Cargo.toml
src/: lib.rs  middleware.rs
src/api/: chat_completion.rs  create_image.rs  embedding.rs  speech.rs  whisper.rs
