[package]
name = "llm-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bytes = "1.5.0"
derive_builder = "0.20.1"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls", "json", "gzip", "multipart"] }
reqwest-middleware = { version = "0.3.3", features = ["json", "multipart"] }
reqwest-retry = "0.6.1"
reqwest-tracing = "0.5.3"
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1.40"
once_cell = "1.19.0"
url = "2.5.0"
http = "1.1.0"


[dev-dependencies]
ctor = "0.2.5"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }